# dynamic-amm-sdk

common/: Cargo.toml
dynamic-amm-quote/: Cargo.toml
programs/dynamic-amm/: Cargo.toml
programs/dynamic-vault/: Cargo.toml
rust-client/: Cargo.toml
