[package]
name = "common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = "0.29.0"
solana-sdk = { version = "1.16.15" }
spl-associated-token-account = "4.0.0"
mpl-token-metadata = "3.2.3"
dynamic-amm = { path = "../programs/dynamic-amm" }
dynamic-vault = { path = "../programs/dynamic-vault" }
lazy_static = "1.4.0"

[features]
devnet = []
